--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </section>
 
         </div>
-        <footer class="has-text-centered has-text-white has-text-weight-bold">Desenvolvido por Alura.</footer>
+        <footer class="has-text-centered has-text-white has-text-weight-bold">Desenvolvido por Leandro.</footer>
     </main>
 
     <script src="./main.js"></script>
